--- a/src/index.css
+++ b/src/index.css
@@ -21,3 +21,21 @@ body {
 a {
   color: inherit;
 } 
+
+main {
+  color: var(--white);
+  min-height: 100vh;
+  padding: 100px 50px 0px;
+}
+
+header {
+  top: 0;
+}
+
+::-webkit-scrollbar { 
+  background-color: #141414; 
+  width: 8px;
+}
+::-webkit-scrollbar-thumb { 
+  background-color: var(--lightGray); 
+}
