--- a/src/index.css
+++ b/src/index.css
@@ -26,7 +26,13 @@ main {
   background-color: var(--white);
   border-bottom: 1px solid var(--fontGray);
   min-height: 100vh;
-  padding: 100px 50px 0px;
+  padding: 120px 100px 30px;
+}
+
+@media(max-width: 530px) {
+  main {
+    padding: 100px 30px 30px;
+  }
 }
 
 header {
